# IoTtools

./: .gitignore  CMakeLists.txt  Debug.cpp  Debug.h  Messenger.cpp  Messenger.h  README.md
examples/: 01-basic-slave.cpp  01-basic.cpp
links/: Link.cpp  Link.h  Socket.cpp  Socket.h
